Save theme setting to localstorage and update theme on load, fix: modal visible on load

--- a/www/css/index.less
+++ b/www/css/index.less
@@ -115,6 +115,10 @@ header {
   display: none;
 }
 
+.hideModalSettings {
+  display: none;
+}
+
 .hideMenu {
   display: none;
 }
